--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
 	<link rel="stylesheet" type="text/css" href="css/tux-anuncios.css">
 </head>
 <body>
+ <header>
+ 	<div class="logo">
+ 		<img src="img/logo.png" alt="Tux-Anuncios"></div>
+ 	<div class="btn-naranja"></div>
+ </header>
+ <section>
 
+ </section>
+ <footer>
+ 	<h3>
+ 		<strong class="power">Power By Fire</strong>
+ 		<span class="copyright">copyright</span>
+ 	</h3>
+ </footer>
 </body>
 </html>
