--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   		</div>
   		<div class="buscador">	
   			<input type="text" placeholder="¿Que estas buscando?">
-  			<a href="#" class="buscar">+</a>
+  			<a href="#" class="buscar"></a>
   		</div>
   	</section>
   	<!-- parte celeste -->
@@ -47,14 +47,9 @@
   			</div>
   			<div class="ficha-menu">
   				<div class="caja visitas">
-  					<span>Icono Ojo</span>
   					<h4>100 Visitas</h4>
-  				</div><div class="caja favoritos">
-  					<span>Icono Corazon</span>
-  					<h4>100 Favoritos</h4>
-  				</div><div class="caja anuncios">
-  					<span>Icono Ojo</span>
-  					<h4>100 Anuncios</h4>
+  				</div><div class="caja favoritos"><h4>100 Favoritos</h4>
+  				</div><div class="caja anuncios"><h4>100 Anuncios</h4>
   				</div>
   			</div>
   			<div class="ficha-cuerpo">
@@ -65,8 +60,6 @@
   				<button class="btn naranja">Visitar Empresa</button>
   			</div>
   		</div>
-  		<!-- termina una ficha -->
-  		<!-- esta es la ficha de la empresa -->
   		<div class="ficha-empresa">
   			<div class="ficha-cabezera">
   				<img src="img/empresa.png" alt="Empresa-Patito">
@@ -74,14 +67,89 @@
   			</div>
   			<div class="ficha-menu">
   				<div class="caja visitas">
-  					<span>Icono Ojo</span>
   					<h4>100 Visitas</h4>
-  				</div><div class="caja favoritos">
-  					<span>Icono Corazon</span>
-  					<h4>100 Favoritos</h4>
-  				</div><div class="caja anuncios">
-  					<span>Icono Ojo</span>
-  					<h4>100 Anuncios</h4>
+  				</div><div class="caja favoritos"><h4>100 Favoritos</h4>
+  				</div><div class="caja anuncios"><h4>100 Anuncios</h4>
+  				</div>
+  			</div>
+  			<div class="ficha-cuerpo">
+  				<h2>Descripcion</h2>
+  				<p>
+  					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis repellendus, adipisci rem earum distinctio, consequatur nesciunt.
+  				</p>
+  				<button class="btn naranja">Visitar Empresa</button>
+  			</div>
+  		</div>
+  		<div class="ficha-empresa">
+  			<div class="ficha-cabezera">
+  				<img src="img/empresa.png" alt="Empresa-Patito">
+  				<h3>Nombre de la empresa Patito</h3>
+  			</div>
+  			<div class="ficha-menu">
+  				<div class="caja visitas">
+  					<h4>100 Visitas</h4>
+  				</div><div class="caja favoritos"><h4>100 Favoritos</h4>
+  				</div><div class="caja anuncios"><h4>100 Anuncios</h4>
+  				</div>
+  			</div>
+  			<div class="ficha-cuerpo">
+  				<h2>Descripcion</h2>
+  				<p>
+  					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis repellendus, adipisci rem earum distinctio, consequatur nesciunt.
+  				</p>
+  				<button class="btn naranja">Visitar Empresa</button>
+  			</div>
+  		</div>
+  		<div class="ficha-empresa">
+  			<div class="ficha-cabezera">
+  				<img src="img/empresa.png" alt="Empresa-Patito">
+  				<h3>Nombre de la empresa Patito</h3>
+  			</div>
+  			<div class="ficha-menu">
+  				<div class="caja visitas">
+  					<h4>100 Visitas</h4>
+  				</div><div class="caja favoritos"><h4>100 Favoritos</h4>
+  				</div><div class="caja anuncios"><h4>100 Anuncios</h4>
+  				</div>
+  			</div>
+  			<div class="ficha-cuerpo">
+  				<h2>Descripcion</h2>
+  				<p>
+  					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis repellendus, adipisci rem earum distinctio, consequatur nesciunt.
+  				</p>
+  				<button class="btn naranja">Visitar Empresa</button>
+  			</div>
+  		</div>
+  		<div class="ficha-empresa">
+  			<div class="ficha-cabezera">
+  				<img src="img/empresa.png" alt="Empresa-Patito">
+  				<h3>Nombre de la empresa Patito</h3>
+  			</div>
+  			<div class="ficha-menu">
+  				<div class="caja visitas">
+  					<h4>100 Visitas</h4>
+  				</div><div class="caja favoritos"><h4>100 Favoritos</h4>
+  				</div><div class="caja anuncios"><h4>100 Anuncios</h4>
+  				</div>
+  			</div>
+  			<div class="ficha-cuerpo">
+  				<h2>Descripcion</h2>
+  				<p>
+  					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis repellendus, adipisci rem earum distinctio, consequatur nesciunt.
+  				</p>
+  				<button class="btn naranja">Visitar Empresa</button>
+  			</div>
+  		</div>
+  		<div class="ficha-empresa">
+  			<div class="ficha-cabezera">
+  				<img src="img/empresa.png" alt="Empresa-Patito">
+  				<h3>Nombre de la empresa Patito</h3>
+  			</div>
+  			<div class="ficha-menu">
+  				<div class="caja visitas">
+  					<h4>100 Visitas</h4>
+  				</div><div class="caja favoritos"><h4>100 Favoritos</h4>
+  				</div><div class="caja anuncios"><h4>100 Anuncios</h4>
   				</div>
   			</div>
   			<div class="ficha-cuerpo">
@@ -99,8 +167,7 @@
  <!-- contenedor principal -->
  <footer>
  	<h3>
- 		<strong class="power">Power By ASD</strong>
- 		<span class="copyright">copyright</span>
+ 		- Power by xOFir3Ox -
  	</h3>
  </footer>
 </body>
