--- a/index.html
+++ b/index.html
@@ -2,173 +2,75 @@
 <html lang="es">
 <head>
 	<meta charset="utf-8"/>
+  <meta name="viewport"content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<title>Tux-Anuncios | SloganSloganSlogan</title>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/tux-anuncios.css">
 </head>
 <body>
-<!-- Header -->
-<header>
- 	<div class="logo">
- 		<img src="img/logo.png" alt="Tux-Anuncios">
- 	</div>
- 	<div class="derecha right">
- 	<button class="btn naranja ">Log-In</button>
- 	</div>
-</header>
- <!-- Header -->
-<!-- contenedor principal -->
-<section class="contenedor">
-	<!-- Anuncio random -->
-  	<section class="anuncio-clasificado">Visita a {Empresa X}, tiene anuncios que podrian interesarte.
-  	</section>
-  	<!-- Anuncio random -->
-  	<!-- parte celeste -->
-  	<section class="seccion-cabezera">
-  		<div class="logo-grande">
-  			<img src="img/logo.png" alt="Tux-Anuncios">
-  		</div>
-  		<div class="buscador">	
-  			<input type="text" placeholder="¿Que estas buscando?">
-  			<a href="#" class="buscar"></a>
-  		</div>
-  	</section>
-  	<!-- parte celeste -->
-  	<!-- empresas destacadas -->
-  	<div class="titulos">
-  		<h2>Empresas Destacadas</h2>
-  	</div>
-  	<section class="empresas-destacadas">
-  		<!-- esta es la ficha de la empresa -->
-  		<div class="ficha-empresa">
-  			<div class="ficha-cabezera">
-  				<img src="img/empresa.png" alt="Empresa-Patito">
-  				<h3>Nombre de la empresa Patito</h3>
-  			</div>
-  			<div class="ficha-menu">
-  				<div class="caja visitas">
-  					<h4>100 Visitas</h4>
-  				</div><div class="caja favoritos"><h4>100 Favoritos</h4>
-  				</div><div class="caja anuncios"><h4>100 Anuncios</h4>
-  				</div>
-  			</div>
-  			<div class="ficha-cuerpo">
-  				<h2>Descripcion</h2>
-  				<p>
-  					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis repellendus, adipisci rem earum distinctio, consequatur nesciunt.
-  				</p>
-  				<button class="btn naranja">Visitar Empresa</button>
-  			</div>
-  		</div>
-  		<div class="ficha-empresa">
-  			<div class="ficha-cabezera">
-  				<img src="img/empresa.png" alt="Empresa-Patito">
-  				<h3>Nombre de la empresa Patito</h3>
-  			</div>
-  			<div class="ficha-menu">
-  				<div class="caja visitas">
-  					<h4>100 Visitas</h4>
-  				</div><div class="caja favoritos"><h4>100 Favoritos</h4>
-  				</div><div class="caja anuncios"><h4>100 Anuncios</h4>
-  				</div>
-  			</div>
-  			<div class="ficha-cuerpo">
-  				<h2>Descripcion</h2>
-  				<p>
-  					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis repellendus, adipisci rem earum distinctio, consequatur nesciunt.
-  				</p>
-  				<button class="btn naranja">Visitar Empresa</button>
-  			</div>
-  		</div>
-  		<div class="ficha-empresa">
-  			<div class="ficha-cabezera">
-  				<img src="img/empresa.png" alt="Empresa-Patito">
-  				<h3>Nombre de la empresa Patito</h3>
-  			</div>
-  			<div class="ficha-menu">
-  				<div class="caja visitas">
-  					<h4>100 Visitas</h4>
-  				</div><div class="caja favoritos"><h4>100 Favoritos</h4>
-  				</div><div class="caja anuncios"><h4>100 Anuncios</h4>
-  				</div>
-  			</div>
-  			<div class="ficha-cuerpo">
-  				<h2>Descripcion</h2>
-  				<p>
-  					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis repellendus, adipisci rem earum distinctio, consequatur nesciunt.
-  				</p>
-  				<button class="btn naranja">Visitar Empresa</button>
-  			</div>
-  		</div>
-  		<div class="ficha-empresa">
-  			<div class="ficha-cabezera">
-  				<img src="img/empresa.png" alt="Empresa-Patito">
-  				<h3>Nombre de la empresa Patito</h3>
-  			</div>
-  			<div class="ficha-menu">
-  				<div class="caja visitas">
-  					<h4>100 Visitas</h4>
-  				</div><div class="caja favoritos"><h4>100 Favoritos</h4>
-  				</div><div class="caja anuncios"><h4>100 Anuncios</h4>
-  				</div>
-  			</div>
-  			<div class="ficha-cuerpo">
-  				<h2>Descripcion</h2>
-  				<p>
-  					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis repellendus, adipisci rem earum distinctio, consequatur nesciunt.
-  				</p>
-  				<button class="btn naranja">Visitar Empresa</button>
-  			</div>
-  		</div>
-  		<div class="ficha-empresa">
-  			<div class="ficha-cabezera">
-  				<img src="img/empresa.png" alt="Empresa-Patito">
-  				<h3>Nombre de la empresa Patito</h3>
-  			</div>
-  			<div class="ficha-menu">
-  				<div class="caja visitas">
-  					<h4>100 Visitas</h4>
-  				</div><div class="caja favoritos"><h4>100 Favoritos</h4>
-  				</div><div class="caja anuncios"><h4>100 Anuncios</h4>
-  				</div>
-  			</div>
-  			<div class="ficha-cuerpo">
-  				<h2>Descripcion</h2>
-  				<p>
-  					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis repellendus, adipisci rem earum distinctio, consequatur nesciunt.
-  				</p>
-  				<button class="btn naranja">Visitar Empresa</button>
-  			</div>
-  		</div>
-  		<div class="ficha-empresa">
-  			<div class="ficha-cabezera">
-  				<img src="img/empresa.png" alt="Empresa-Patito">
-  				<h3>Nombre de la empresa Patito</h3>
-  			</div>
-  			<div class="ficha-menu">
-  				<div class="caja visitas">
-  					<h4>100 Visitas</h4>
-  				</div><div class="caja favoritos"><h4>100 Favoritos</h4>
-  				</div><div class="caja anuncios"><h4>100 Anuncios</h4>
-  				</div>
-  			</div>
-  			<div class="ficha-cuerpo">
-  				<h2>Descripcion</h2>
-  				<p>
-  					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis repellendus, adipisci rem earum distinctio, consequatur nesciunt.
-  				</p>
-  				<button class="btn naranja">Visitar Empresa</button>
-  			</div>
-  		</div>
-  		<!-- termina una ficha -->
-  	</section>
-  	<!-- empresas destacadas -->
- </section>
- <!-- contenedor principal -->
- <footer>
- 	<h3>
- 		- Power by xOFir3Ox -
- 	</h3>
- </footer>
+<div id="wrap"> 
+<!-- envolvente general de nuestra página --> 
+  <div id="main"> <!-- Contenido de nuesta pagina --> 
+    <header>
+      <div class="logo">
+        <a href="index.html"><img src="img/logo.png" alt="Tux-Anuncios"></a>
+      </div>
+      <div class="cont-menu">
+        <a class="btn btn-amarillo" href="login.html">  Log-In  </a>
+      </div>
+    </header>
+    <!-- Anuncio random -->
+    <section class="anuncio-clasificado">
+      <div class="logo-clasificado left">
+        <img src="img/empresa.png" alt="NombreDeLaEmpresa"/>  
+      </div>
+      <div class="descripcion-clasificado">
+        <p>Visita a Empresa X, tiene anuncios que podrian interesarte. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis temporibus doloremque</p>  
+      </div>
+      <div class="boton-ir">
+        <a href="#"></a>
+      </div>
+    </section>
+    <section class="buscador">
+      <div class="img-buscador">
+        <img src="img/logo.png" alt="">
+      </div>
+      <div class="text-buscador">
+        <input type="search" placeholder="¿Qué estas buscando?">
+        <a href="#" class="btn btn-verde"></a>
+      </div>
+    </section>
+    <div class="cabecera">
+        <h2>Empreasas destacadas</h2>
+    </div>
+    <section class="empresas">
+      <div class="empresa">
+        <div class="empresa-cabecera">
+          <img src="img/empresa.png" alt="">
+          <h3>Nombre de la empresa</h3>
+        </div>
+        <div class="menu-empresa">
+          <div class="caja visitas">
+            <h4>100 Visitas</h4>
+          </div><div class="caja favoritos"><h4>100 Favoritos</h4>
+          </div><div class="caja anuncios"><h4>100 Anuncios</h4>
+          </div>
+        </div>
+        <div class="descripcion-empresa">
+          <h3>Descripción</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore reprehenderit atque accusantium cum id nulla maxime quaerat repellendus, architecto quisquam recusandae sunt aspernatur cumque, quidem rem esse impedit et, sed?</p>
+        </div>
+        <div class="accion-empresa">
+          <a href="#" class="btn btn-rojo">Visitar Empresa</a>
+        </div>
+
+      </div>
+    </section>
+  </div> 
+</div> 
+<div id="footer"> 
+  <p> Power by xOFireOx </p> 
+</div> 
 </body>
 </html>
+
